syntax = "proto3";

package api;

option go_package = "github.com/marcoshuck/jaeger-demo/api";

message UserID {
  string id = 1;
}

message TweetID {
  string id = 2;
}